add: test for feature ViewModels